# ThreadPersist

./: README.md  pyproject.toml
src/: __main__.py
src/bot/: __init__.py  bot.py
src/exts/: ping.py  threads.py
